# RUST_TODO_APP

./: .env  Cargo.toml
migrations/: 001_create_todos.sql
src/: .env  app_state.rs  db.rs  main.rs
src/models/: todo.rs
src/repos/: todo_repo.rs
