[package]
name = "RUST_TODO_APP"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = "0.4.40"
